--fixed #2 Safari wrapping text

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,7 +72,8 @@ body{
                 // font-size: 16px;
                 outline: none;
                 flex: 1;
-                white-space: nowrap;
+                // white-space: nowrap;  --------> Doesn't work in safari
+                white-space: pre-wrap;
             }
         }
     }
